# Doozer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  dev-requirements.txt  docs-requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  file_consumer.py  index.rst
doozer/: __init__.py  __main__.py  base.py  cli.py  config.py  exceptions.py  extensions.py  types.py
doozer/contrib/: __init__.py
doozer/contrib/retry/: __init__.py
doozer/contrib/sphinx/: __init__.py
tests/: conftest.py  test_application.py  test_cli.py  test_config.py  test_exceptions.py  test_extensions.py  test_misc.py
tests/contrib/: test_retry.py  test_sphinx.py
