[flake8]
# TODO(dirn): Remove C816 once 3.5 is no longer supported.
ignore = C816,D105

[isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = doozer
lines_after_types = 1
multi_line_output = 3
not_skip = __init__.py

[metadata]
license_file = LICENSE
