[flake8]
ignore = D105, D202, D413, E203, E501

[isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = doozer
known_third_party = argh,docutils,pytest,sphinxcontrib,watchdog
lines_after_types = 1
multi_line_output = 3
not_skip = __init__.py

[metadata]
license_file = LICENSE
