[flake8]
ignore = D105, D202, D413, E203, E501, F722
per-file-ignores =
    docs/conf.py: D100
    docs/file_consumer.py: D100,D107,D403
    setup.py: D100,D101,D102,D103,N812

[isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[metadata]
license_file = LICENSE
